kubernetes/istio/search-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fusionauth-search-discovery
  namespace: default
spec:
  hosts:
    - fusionauth-search-discovery
  tcp:
    - route:
        - destination:
            host: fusionauth-search-discovery
            port:
              number: 9300
